# rusty-days-2020

./: Cargo.toml  README.md  config.json
src/: cell.rs  config.rs  game.rs  main.rs  point.rs  renderer.rs
src/graphics/: mod.rs  texture.rs  vao.rs  vbo.rs
src/graphics/shader/: fragment.rs  geometry.rs  mod.rs  program.rs  vertex.rs
src/shaders/: cell.frag  cell.geom  cell.vert
