[package]
name = "rusty-days-2020"
version = "0.1.0"
authors = ["MarcoIeni"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
memoffset = "0.5.5"
glutin = "0.24.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"